fix problems test project

--- a/Algorithms/test/Problems.Test/Problems.Test.csproj
+++ b/Algorithms/test/Problems.Test/Problems.Test.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Problems\Problems.csproj" />
+    <ProjectReference Include="..\..\src\Problems\Problems.csproj" />
   </ItemGroup>
 
 </Project>
